# CourseWork4

./: .env_example  README.md  cfg.py  main.py  pyproject.toml
src/: api.py  engine.py  saver.py  utils.py  vacancies.py
